--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
             font-size: 20px;
         }
 
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+            display: flex; /* Center content */
+            align-items: center;
+            justify-content: center;
+            z-index: 1000; /* Ensure it stays on top */
+        }
+
         #colorOptions {
             display: flex;
             gap: 10px;
