--- a/index.html
+++ b/index.html
@@ -47,19 +47,6 @@
             font-size: 20px;
         }
 
-        #overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-            display: flex; /* Center content */
-            align-items: center;
-            justify-content: center;
-            z-index: 1000; /* Ensure it stays on top */
-        }
-
         #colorOptions {
             display: flex;
             gap: 10px;
@@ -192,7 +179,7 @@
                 // Calculate grid position
                 const gridX = Math.floor(x / pixelSize) * pixelSize;
                 const gridY = Math.floor(y / pixelSize) * pixelSize;
-                const pixelKey = `${gridX},${gridY}`;
+                const pixelKey = ${gridX},${gridY};
 
                 // Check if the pixel position is already occupied
                 if (!placedPixels.includes(pixelKey)) {
@@ -231,7 +218,7 @@
 
         // Function to update countdown display
         function updateCountdownDisplay(timeLeft) {
-            countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
+            countdownDisplay.textContent = Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')};
         }
 
         // Function to handle mouse click events on the canvas
