--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             align-items: center;
         }
 
+        .color-box {
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            border: 2px solid #555;
+        }
+
         #accessSection {
             margin-top: 20px;
             display: flex;
@@ -104,14 +111,6 @@
         #welcomeText li {
             margin-bottom: 5px;
         }
-
-        /* Add styles for the color selection box */
-        #colorPicker {
-            width: 50px;
-            height: 50px;
-            border: 2px solid #555;
-            margin-top: 10px;
-        }
     </style>
 </head>
 <body>
@@ -120,10 +119,11 @@
         <canvas id="pixelCanvas" width="500" height="500"></canvas>
         <div class="overlay" id="overlay">Enter Access Code to Unlock Canvas</div>
     </div>
-
+    
     <div id="colorOptions">
-        <label for="colorPicker">Select Color:</label>
         <input type="color" id="colorPicker" value="#000000">
+        <div id="currentColor" class="color-box" style="background-color: #000000;"></div>
+        <div id="countdown" style="color: #ffcc00; margin-left: 10px;">Cooldown: 0:00</div>
     </div>
 
     <div id="accessSection">
@@ -150,10 +150,12 @@
         const canvas = document.getElementById('pixelCanvas');
         const ctx = canvas.getContext('2d');
         const overlay = document.getElementById('overlay');
+        const colorPicker = document.getElementById('colorPicker');
+        const currentColorBox = document.getElementById('currentColor');
+        const countdownDisplay = document.getElementById('countdown');
         const submitCodeButton = document.getElementById('submitCode');
         const userInput = document.getElementById('userInput');
         const wipeCanvasButton = document.getElementById('wipeCanvasButton');
-        const colorPicker = document.getElementById('colorPicker');
 
         let isCanvasUnlocked = false;
         let cooldown = false;
@@ -161,9 +163,18 @@
         let cooldownTime = 300; // 300 seconds (5 minutes)
         let countdownTimer;
 
+        // Initialize pixel color
+        let currentColor = colorPicker.value;
+
         // Array to keep track of placed pixels
         const placedPixels = [];
         const pixelSize = 10; // Adjusted pixel size
+
+        // Update the current color display
+        colorPicker.addEventListener('input', (e) => {
+            currentColor = e.target.value;
+            currentColorBox.style.backgroundColor = currentColor;
+        });
 
         // Function to place a pixel on the canvas
         function placePixel(x, y) {
@@ -175,7 +186,7 @@
 
                 // Check if the pixel position is already occupied
                 if (!placedPixels.includes(pixelKey)) {
-                    ctx.fillStyle = colorPicker.value; // Use selected color from color picker
+                    ctx.fillStyle = currentColor;
                     ctx.fillRect(gridX, gridY, pixelSize, pixelSize); // Set pixel size to pixelSize x pixelSize
                     placedPixels.push(pixelKey);
                     pixelsPlaced++;
@@ -208,6 +219,11 @@
             }, 1000);
         }
 
+        // Function to update countdown display
+        function updateCountdownDisplay(timeLeft) {
+            countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
+        }
+
         // Function to handle mouse click events on the canvas
         canvas.addEventListener('click', (e) => {
             const rect = canvas.getBoundingClientRect();
@@ -219,17 +235,17 @@
 
         // Function to handle access code submission
         submitCodeButton.addEventListener('click', () => {
-            const code = userInput.value;
+            const code = userInput.value.trim(); // Trim whitespace
 
             // Check if the entered code is correct
             if (code === "Itsameamario1") {
                 overlay.style.display = 'none'; // Unlock the canvas
-                isCanvasUnlocked = true; // Set the flag to true
-                wipeCanvasButton.style.display = 'block'; // Show the wipe button
+                isCanvasUnlocked = true; // Set the flag to unlock the canvas
                 userInput.value = ''; // Clear the input field
-                loadCanvasState(); // Load previous canvas state
+                wipeCanvasButton.style.display = 'block'; // Show the wipe button
+                restoreCooldown(); // Restore cooldown if applicable
             } else {
-                alert('Incorrect access code. Please try again.');
+                alert("Incorrect access code. Please try again.");
             }
         });
 
@@ -237,61 +253,44 @@
         wipeCanvasButton.addEventListener('click', () => {
             if (confirm("Are you sure you want to wipe the canvas? This action cannot be undone.")) {
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
-                placedPixels.length = 0; // Clear the placed pixels array
-                localStorage.removeItem('canvasState'); // Clear the canvas state from local storage
+                placedPixels.length = 0; // Clear placed pixels
+                pixelsPlaced = 0; // Reset pixel count
             }
         });
 
-        // Load the saved canvas state from local storage
-        function loadCanvasState() {
+        // Function to save the canvas state in local storage
+        function saveCanvasState() {
+            localStorage.setItem('canvasState', canvas.toDataURL());
+        }
+
+        // Function to restore canvas state from local storage
+        function restoreCanvasState() {
             const savedState = localStorage.getItem('canvasState');
             if (savedState) {
-                const pixels = JSON.parse(savedState);
-                pixels.forEach(pixel => {
-                    const [x, y, color] = pixel;
-                    ctx.fillStyle = color;
-                    ctx.fillRect(x, y, pixelSize, pixelSize);
-                    placedPixels.push(`${x},${y}`);
-                });
+                const img = new Image();
+                img.onload = () => {
+                    ctx.drawImage(img, 0, 0);
+                };
+                img.src = savedState;
             }
+        }
 
-            // Load cooldown state
+        // Function to restore cooldown
+        function restoreCooldown() {
             const cooldownEnd = localStorage.getItem('cooldownEnd');
             if (cooldownEnd) {
-                const timeLeft = Math.ceil((cooldownEnd - new Date().getTime()) / 1000);
-                if (timeLeft > 0) {
-                    startCooldown(timeLeft);
+                const remainingTime = Math.max(0, Math.floor((cooldownEnd - new Date().getTime()) / 1000));
+                if (remainingTime > 0) {
+                    startCooldown(remainingTime);
                 }
             }
         }
 
-        // Save the current canvas state to local storage
-        function saveCanvasState() {
-            const canvasState = placedPixels.map(pixelKey => {
-                const [x, y] = pixelKey.split(',').map(Number);
-                return [x, y, colorPicker.value]; // Store color as well
-            });
-
-            localStorage.setItem('canvasState', JSON.stringify(canvasState));
-        }
-
-        // Update the countdown display
-        function updateCountdownDisplay(timeLeft) {
-            const countdownDisplay = document.getElementById('countdownDisplay');
-            const minutes = Math.floor(timeLeft / 60);
-            const seconds = timeLeft % 60;
-            countdownDisplay.textContent = `Cooldown: ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-        }
-
-        // Event listener to update current color from color picker
-        colorPicker.addEventListener('input', (e) => {
-            const selectedColor = e.target.value;
-            // Optionally, you can do something with the selected color
-        });
-
-        // Load canvas state when the page is loaded
-        window.onload = loadCanvasState;
-
+        // Restore the canvas state and cooldown on page load
+        window.onload = () => {
+            restoreCanvasState();
+            restoreCooldown();
+        };
     </script>
 </body>
 </html>
