--- a/index.html
+++ b/index.html
@@ -5,110 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Wars</title>
     <style>
-        body {
-            font-family: 'Verdana', sans-serif;
-            background-color: #2c2c2c;
-            color: #e0e0e0;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        h1 {
-            margin-top: 20px;
-            color: #ffcc00;
-        }
-
-        #pixelCanvas {
-            border: 1px solid #555;
-            margin-top: 20px;
-            cursor: pointer;
-            background-color: #ffffff;
-        }
-
-        #canvasContainer {
-            position: relative;
-        }
-
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-        }
-
-        #colorOptions {
-            display: flex;
-            gap: 10px;
-            margin-top: 10px;
-            align-items: center;
-        }
-
-        #accessSection {
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        #accessSection input {
-            padding: 5px;
-            margin-top: 10px;
-            border-radius: 5px;
-            border: 1px solid #555;
-        }
-
-        #wipeCanvasButton {
-            margin-top: 20px;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            background-color: #ff5555;
-            color: #ffffff;
-            cursor: pointer;
-            display: none; /* Initially hidden */
-        }
-
-        #countdown {
-            color: #ffcc00; /* Countdown text color */
-            margin-left: 10px;
-        }
-
-        #welcomeText {
-            margin-top: 30px;
-            max-width: 600px;
-            text-align: left;
-            font-size: 14px;
-            background-color: #3c3c3c;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            color: #e0e0e0;
-        }
-
-        #welcomeText h2 {
-            margin-bottom: 10px;
-            font-size: 18px;
-            color: #ffcc00;
-        }
-
-        #welcomeText ul {
-            padding-left: 20px;
-        }
-
-        #welcomeText li {
-            margin-bottom: 5px;
-        }
+        /* Your CSS styles here */
     </style>
     <!-- Include Firebase SDK -->
     <script type="module">
@@ -162,6 +59,7 @@
                 randomAccessCode = Math.random().toString(36).substring(2, 8); // Generates a 6-character random code
                 localStorage.setItem('randomAccessCode', randomAccessCode); // Store the random access code
             }
+
             // Hide the admin code from the console
             const adminCode = "Itsameamario1";
 
@@ -284,6 +182,9 @@
                     isAdmin = true; // Set user as admin
                     wipeCanvasButton.style.display = 'block'; // Show clear canvas button for admin
                     overlay.style.display = 'none'; // Remove overlay for admin
+                } else if (inputCode === randomAccessCode) {
+                    isCanvasUnlocked = true; // Set user as a regular user
+                    overlay.style.display = 'none'; // Remove overlay for user
                 } else {
                     alert('Invalid access code.'); // Alert for invalid code
                 }
@@ -302,28 +203,13 @@
 </head>
 <body>
     <h1>Pixel Wars</h1>
-    <div id="canvasContainer">
-        <canvas id="pixelCanvas" width="500" height="500"></canvas>
-        <div class="overlay" id="overlay">Access Restricted. Please enter the access code.</div>
-    </div>
-    <div id="colorOptions">
-        <input type="color" id="colorPicker" value="#ff0000">
-        <span id="countdown">Cooldown: 0:00</span>
-    </div>
-    <div id="accessSection">
-        <input type="text" id="userInput" placeholder="Enter Access Code">
+    <canvas id="pixelCanvas" width="800" height="600" style="border:1px solid black;"></canvas>
+    <div id="overlay" style="display: block;">
+        <input type="text" id="userInput" placeholder="Enter access code">
         <button id="submitCode">Submit</button>
     </div>
-    <button id="wipeCanvasButton">Clear Canvas</button> <!-- Initially hidden -->
-    <div id="welcomeText">
-        <h2>Welcome to Pixel Wars!</h2>
-        <p>Here are the rules:</p>
-        <ul>
-            <li>Place your pixels on the canvas using the color picker.</li>
-            <li>Once you place a pixel, you will enter a cooldown period.</li>
-            <li>During the cooldown, you cannot place more pixels.</li>
-            <li>Admins can clear the canvas using the "Clear Canvas" button.</li>
-        </ul>
-    </div>
+    <input type="color" id="colorPicker">
+    <div id="countdown">Cooldown: 0:00</div>
+    <button id="wipeCanvasButton" style="display: none;">Clear Canvas</button>
 </body>
 </html>
