--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   
   <canvas id="canvas" width="400" height="400"></canvas>
   
-  <div>
+  <div style="margin-top: 10px;"> <!-- Added margin for spacing -->
     <input type="color" id="colorPicker" value="#000000"> <!-- Color Picker -->
-    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button> <!-- Clear Canvas button -->
+    <button id="clearCanvasButton" style="display: none; margin-left: 10px;">Clear Canvas</button> <!-- Clear Canvas button -->
   </div>
   
-  <div>
+  <div style="margin-top: 10px;"> <!-- Added margin for spacing -->
     <input type="password" id="passwordInput" placeholder="Enter password">
     <button id="submitPassword">Submit</button>
   </div>
