--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 <body>
   <h1>Pixel Wars</h1>
   
+  <!-- Canvas section -->
   <canvas id="canvas" width="400" height="400"></canvas>
-  <input type="color" id="colorPicker" value="#000000">
   
+  <!-- Controls section for color picker, password, etc. -->
+  <div id="controls">
+    <input type="color" id="colorPicker" value="#000000">
+    <input type="password" id="passwordInput" placeholder="Enter password">
+    <button id="submitPassword">Submit</button>
+    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
+  </div>
+  
+  <!-- Cooldown Timer -->
   <div id="cooldown-timer">You can place a pixel now!</div>
-  
-  <input type="password" id="passwordInput" placeholder="Enter password">
-  <button id="submitPassword">Submit</button>
-  <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
 
   <script src="script.js"></script>
 </body>
