--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
 </head>
 <body>
   <h1>Pixel Wars</h1>
-  
-  <!-- Canvas -->
   <canvas id="canvas" width="400" height="400"></canvas>
-  
-  <!-- Controls section for color picker, password input, and clear canvas button -->
-  <div id="controls">
-    <input type="color" id="colorPicker" value="#000000"> <!-- Color picker -->
-    <input type="password" id="passwordInput" placeholder="Enter password"> <!-- Password -->
-    <button id="submitPassword">Submit</button> <!-- Submit Password -->
-    <button id="clearCanvasButton" style="display: none;">Clear Canvas</button> <!-- Clear Canvas button (for admin) -->
+  <div id="colorPickerContainer">
+    <label for="colorPicker">Choose a color:</label>
+    <input type="color" id="colorPicker" value="#000000">
   </div>
-  
-  <!-- Cooldown Timer -->
+  <div id="passwordContainer">
+    <input type="password" id="passwordInput" placeholder="Enter password">
+    <button id="submitPassword">Submit</button>
+  </div>
+  <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
   <div id="cooldown-timer">You can place a pixel now!</div>
-
+  <div id="welcomeText">
+    <h2>Welcome to Pixel Wars!</h2>
+    <p>This space is all about collaboration and creativity. Go wild, be quirky, or team up with others to create something amazing. The image you create here will become our server banner at the end of every month. You've got one pixel every 5 minutes, so make it count!</p>
+    <p>Here are some quick tips to get you started:</p>
+    <ul>
+      <li>Click on the canvas to place a pixel.</li>
+      <li>You can replace any pixel, no matter who placed it there!</li>
+    </ul>
+    <p>Game on and happy pixeling!</p>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
