--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   <canvas id="canvas" width="400" height="400"></canvas>
 
   <input type="color" id="colorPicker">
-  <input type="password" id="passwordInput" placeholder="Enter password">
-  <button id="submitPassword">Submit</button>
+  
+  <div id="passwordSection">
+    <input type="password" id="passwordInput" placeholder="Enter Password">
+    <button id="submitPassword">Submit</button>
+    <p id="weeklyUserPassword"></p> <!-- This will show the weekly password -->
+  </div>
+
   <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
 
   <div id="cooldown-timer">You can place a pixel now!</div>
